--- a/styles/style.css
+++ b/styles/style.css
@@ -46,11 +46,9 @@ text-decoration: none;
 list-style-type: none;
 }
 .container {
-max-width: 100%;
-padding-right: 1rem;
-padding-left: 1rem;
-margin-right:-1rem;
-margin-left: -1rem;
+width: 100%;
+padding:0 auto;
+margin:0 auto;
 }
 /* start header's styles code from 56 to 255 */
 /* navBar that consist of two part start from 57to 187 */
@@ -210,33 +208,34 @@ padding-right: 1rem;
 }
 /* header Picture =212 to 256  */
 .headerPicture{
-  background-image:url("../pictures/main\ background.avif");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 25rem;
-    width: 84rem;
+background-image:url("../pictures/main\ background.avif");
+background-position: center;
+background-size: cover;
+background-repeat: no-repeat;
+margin-top: 1rem;
+height: 30rem;
+width: 84rem;
+border-radius:0 0 8rem 8rem;
+box-shadow: 1px 1px 5px #302c2c;
 }
 .headerTitel{
     font-size: 2.5rem;
     color: #fff;
     padding-right: 5rem;
     padding-top: 2rem;
-    text-shadow: 1px 2px 5px rgb(223, 102, 102);
+    text-shadow: 1px 2px 2px rgb(236, 231, 231);
 }
 .headerText{
-    font-size: 1rem;
-    background-color:rgba(248, 244, 244, 0.5);
+    font-size: 1.2rem;
     width: 20rem;
-    color: #0c0c0c;
+    color: #ff0404;
     margin-right: 6rem;
     margin-top: 0.1rem;
     padding-right: 3rem;
-    padding: 0.5rem;
+    padding:1rem;
     text-align: center;
     border-radius:0 0 1rem 1rem ;
     text-shadow: 1px 2px 5px #302c2c;
-    box-shadow:1px 3px 7px #212121;
 }
 .headerBtn{
     background-color: #fff;
@@ -245,8 +244,8 @@ padding-right: 1rem;
     font-weight: bolder;
     color: #212121;
     border: none;
-    margin-right: 13rem;
-    margin-top: 0.5rem;
+    margin-right: 14rem;
+    margin-top: -1rem;
     width: 4rem;
     height: 1.5rem;
     text-align: center;
@@ -259,7 +258,7 @@ padding-right: 1rem;
 .mainIconsMenu{
 position: relative;
 display: flex;
-gap: 1rem;
+gap: 0.5rem;
 align-items: center;
 justify-content: space-evenly;
 margin-right: 2.5rem;
@@ -279,8 +278,89 @@ width: 4rem;
 border: 2px solid #6000d9;
 border-radius: 100%;
 padding:0.1rem;
+}
+/* offer part from 284 to  */
+.offerLogos{
+display: flex;
+flex-direction: column;
+background-color: crimson;
+width: 75rem;
+height: 17rem;
+margin:1rem 4rem;
+padding:1rem 2rem 1rem;
+border-radius: 2rem;
+}
+.timeBox{
+font-size: 2rem;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold';
+color:#fff;
+word-spacing: 2px;
+}
+.mainLogoDgkala{
+margin-left: 3rem;
+width: 6.2rem;
+}
+/* offerPart album  */
+.albumMenu{
+display: flex;
+gap: 1rem;
+margin-top:-16rem ;
+margin-right: 15rem;
 
 }
+.albumItem{
+background-color: #fff;
+width: 9rem;
+height: 13rem;
+padding: 0.5rem;
+text-align: justify;
+border-radius: 1rem;
+box-shadow: 2px 3px 6px #302c2c;
+}
+.albumImage{
+width: 8rem;
+padding:0 1rem;
+}
+.albumText{
+font-size: 0.7rem;
+padding-bottom: 1rem;
+}
+.pricetext{
+display: flex;
+margin-right: 3rem;
+font-family:'vazir';
+font-weight: bold;
+}
+.offText{
+display: inline-block;
+position: absolute;
+font-family:'vazir';
+font-size: 0.8rem;
+font-weight: bold;
+background-color:crimson;
+padding: 0.3rem;
+border-radius: 0.8rem;
+margin-top: -2.2rem;
+color: #fff;
+}
+.delPrice{
+    color: #646770;
+}
+.albumIcon{
+    position: absolute;
+    right: 74.5rem;
+    margin-top: -9rem;
+    font-size: 4rem;
+    color: #fff;
+    text-shadow: 2px 3px 7px #302c2c;
+}
+
+
+
+
+
+
+
 /* fonts */
 @font-face {
 font-family: 'vazir';
@@ -290,9 +370,21 @@ url('../fonts/vazir.woff') format('woff'),
 url('../fonts/vazir.woff2') format('woff2');
 }
 /* responsive Part */
+@media screen and (max-width:578px){
+.iconsLink{
+display: none;
+}
+.mainIconsMenu{
+flex-wrap: wrap;
+}
+.iconsMainPart{
+width:70rem;
+}
+}
 @media screen and (max-width:992px){
 
-.bottomNav , .logInPart , .bi-cart , .profileMenu{
+.bottomNav , .logInPart , .bi-cart , .profileMenu
+,.albumText{
 display: none;
 }
 .navMenuPhone{
@@ -304,12 +396,21 @@ border-bottom: 1px solid #c6c7cf;
 padding-bottom:1rem;
 }
 .dgkalaLogo{
-    width: 15rem;
-    margin-right: 11rem;
+width: 15rem;
+margin-right: 11rem;
 }
 .searchBox{
-    width: 20rem;
+width: 20rem;
 }
-.
+.iconsMainPart{
+width: 7rem;
+}
+.mainIconsMenu{
+margin-right: 35rem;
+}
+.albumImage{
+width: 9rem;
+margin-bottom: 1.5rem;
+}
 }
 
