--- a/styles/style.css
+++ b/styles/style.css
@@ -459,7 +459,32 @@ margin-top: 1rem;
 .imageBottomPart{
 width: 40rem;
 border-radius: 2rem;
+margin-bottom: 1rem;
 box-shadow: 2px 2px 7px #424650;
+}
+/*  */
+.imageBox{
+display: flex;
+padding: 0.5rem;
+margin: 0 1rem;
+border: 1px solid #bec1c4;
+border-radius: 1rem;
+}
+.cover ,.watch ,.mobile ,.headPhone{
+border-left: 1px solid #bec1c4;
+padding-right: 1rem;
+align-items: center;
+}
+.imageBoxTitle{
+font-size: 1.5rem;
+color: #212121;
+}
+.imageBoxText{
+color:#a1a3a8;
+}
+.imgPooster{
+width: 8rem;
+
 }
 /* fonts */
 
@@ -478,18 +503,13 @@ box-shadow: 2px 2px 7px #424650;
 .iconsLink{
 display: none;
 }
-.mainIconsMenu{
-flex-wrap: wrap;
-}
-.iconsMainPart{
-width:70rem;
-}
 }
 @media screen and (max-width:992px){
 
 .bottomNav , .logInPart , .bi-cart , .profileMenu
-,.bottomImagePart , .albumText ,.BrandPart ,.brandTitle{
+,.bottomImagePart,.imageBoxText , .albumText ,.BrandPart ,.brandTitle{
 display: none;
+
 }
 .navMenuPhone{
 display:inline-block;
@@ -507,11 +527,10 @@ margin-right: 11rem;
 width: 20rem;
 }
 .iconsMainPart{
-width: 14rem;
-margin-right: 8rem;
+width: 8rem;
 }
 .mainIconsMenu{
-margin-right: 35rem;
+margin-right:42rem;
 }
 .albumImage{
 width: 9rem;
@@ -527,5 +546,16 @@ width: 38rem;
 .bottomImagePart{
 flex-direction: column; 
 }
+.imageBox{
+width: 40rem;
+margin-right:20rem;
+margin-top: 3rem;
 }
-
+.imageBoxTitle{
+    font-size: 1rem;
+    text-align: center;
+    border-left: none;
+}
+.cover ,.watch ,.mobile ,.headPhone{
+border-left: none;
+}
