--- a/styles/style.css
+++ b/styles/style.css
@@ -34,13 +34,15 @@
 box-sizing: border-box;
 margin: 0;
 padding: 0;
-font-family:var(--primary-font)
+font-family:var(--primary-font);
 }
 body{
 text-decoration: none;
 list-style-type: none;
 font-size: 0.8rem;
 font-family:'vazir';
+outline: none;
+overflow-x: hidden;
 }
 a , ul ,li  , ol{
 text-decoration: none;
@@ -484,11 +486,137 @@ color:#a1a3a8;
 }
 .imgPooster{
 width: 8rem;
-
 }
+/* footer styling */
+footer{
+display: flex;
+background: #fff;
+width: 84rem;
+height: 15rem;
+border-top: 2px solid #ff0404;
+border-radius: 1rem;
+margin:4rem 1rem;
+padding: 2rem;
+}
+.footerLogo{
+width: 15rem;
+}
+.textFooter{
+display: inline-block;
+position: relative;
+top: 2rem;
+margin-right: -15rem;
+color: #646770;
+}
+.number{
+padding:0 1rem 0;
+border-left: 1px solid #bfc1c5;
+border-right: 1px solid #bfc1c5;
+}
+.backBtn{
+display: flex;
+margin-right: 68rem;
+margin-top: -3rem;
+border: 1px solid #c6c7cf;
+border-radius: 1rem;
+width: 8rem;
+text-align: center;
+padding: 0.5rem 1.5rem 0.5rem 0;
+color: #212121;
+}
+.iconsMenu{
+display: flex;
+position: relative;
+flex-direction: row;
+top: 4rem;
+right: 20rem;
+}
+.iconsItems{
+display: flex;
+flex-direction: column;
+justify-content: space-evenly;
+}
+.iconsText{
+padding-right: 5rem;
+text-align: center;
+}
+
+.iconsImg{
+    width: 5rem;
+    margin-right: 5rem;
+}
+/* footerText Menu */
+.footerText{
+display: flex;
+gap: 10rem;
+margin-top: 6rem;
+}
+.rightMenuText , .CenterMenuText{
+color: #646770;
+}
+.title{
+padding: 0.5rem 0 1rem;
+color:#029a49;
+font-size: 1.2rem;
+}
+.linksFooter{
+display: inline-block;
+color: #646770;
+margin-bottom: 0.5rem;
+font-size: 0.8rem;
+}
+.linksFooter:hover{
+color: crimson;
+cursor: pointer;
+transition: all 250ms ease-in-out;
+border-bottom: 1px solid crimson;
+font-size: 1rem;
+}
+/* email input  */
+.emailInput{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1;
+    margin-top: -10rem;
+    margin-right: -40rem;
+    }
+    .textEmail{
+    font-size: 0.8rem;
+    color: #212121;
+    }
+    #emailAddress{
+    width: 12rem;
+    height: 2rem;
+    margin-top: 1rem;
+    background-color: #c6c7cf;
+    border: 1px solid #c6c7cf;
+    text-align: center;
+    border-radius:0.2rem ;
+    outline: none;
+    }
+    .submit{
+    width: 2rem;
+    height: 2rem;
+    position: absolute;
+    margin-top: 2.2rem;
+    margin-right: 12.5rem;
+    background-color: #c6c7cf;
+    border: 1px solid #ecedff;
+    border-radius:0.2rem ;
+    color: #fff;
+    }
+    .submit:hover{
+    color: #ff0404;
+    transition: all 250ms ease-in-out;
+    cursor: pointer;
+    }
 /* fonts */
 
-@font-face {}
+@font-face {
+    font-family: 'vazir';
+    src: url(../fonts/vazir-Black.woff);
+}
 @font-face {
     font-family: 'vazir';
     src: url(../fonts/vazir-Black.woff);
@@ -558,4 +686,5 @@ margin-top: 3rem;
 }
 .cover ,.watch ,.mobile ,.headPhone{
 border-left: none;
+}
 }
